--- a/dextra backend/package.json
+++ b/dextra backend/package.json
@@ -2,21 +2,24 @@
   "name": "dextra-backend",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": " node server.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.14.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "mongoose": "^8.4.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.3"
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.14.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
